# matter

./: .ghc.environment.x86_64-linux-8.4.3  .gitignore  Dockerfile  Makefile  cabal.project  cabal.project.prod  stack.yaml  todo
matter-daemon/: matter-daemon.cabal
matter-daemon/app/: Main.hs
matter-daemon/src/Matter/Daemon/: App.hs
matter-editor/: .gitignore  .merlin  Cargo.toml  README.md  bsconfig.json  index.html  package-lock.json  package.json  renderer.js  webpack.config.js
matter-editor/frontend/: Action.re  Syntax.re  app.re  csstransition.re  moment.re  transition.re  transitiongroup.re
matter-editor/frontend/Component/: ExprView.re
matter-editor/frontend/ConureUI/: Paper.re  TextArea.re
matter-editor/frontend/ConureUI/Animated/: AnimatedMount.re  Fade.re
matter-editor/public/: index.html
matter-editor/src/: ModuleData.re  ModuleItem.re  UserData.re  UserItem.re  app.bs.js  app.re  main.bs.js  main.rs
matter-editor/src/ConureUI/: Paper.re
matter-language/: matter-language.cabal
matter-language-syntax/: matter-language-syntax.cabal
matter-language-syntax/src/Matter/Language/Syntax/: Location.hs  Name.hs  Source.hs
matter-language/src/Matter/Language/Syntax/: Location.hs  Name.hs  Prim.hs
matter-server/: matter-server.cabal
matter-server-api/: Dockerfile  README.md  matter-server-api.cabal  matter.sqlite
matter-server-api/app/: Main.hs
matter-server-api/src/Matter/Server/: Config.hs  Lib.hs
matter-server-api/src/Matter/Server/Api/: Item.hs  Module.hs
matter-server-api/src/Matter/Server/Model/: Item.hs  Module.hs
matter-server-api/src/Matter/Server/Query/: Item.hs  Module.hs
matter-server-postgresql/: matter-server-postgresql.cabal
matter-server-postgresql/app/: Main.hs
matter-server-postgresql/src/: Config.hs
matter-server-rust/: Cargo.toml
matter-server-rust/src/: main.rs
matter-server-sqlite/: matter-server-sqlite.cabal  sqlite.db
matter-server-sqlite/local/: Main.hs
matter-server-sqlite/src/: Config.hs
matter-server/app/: Main.hs
matter-server/src/: Api.hs  App.hs  Lib.hs  Models.hs
matter-server/src/Api/: Modules.hs
matter-server/src/Matter/Server/: App.hs
matter-service/: matter-service.cabal
matter-service/apps/matter-service-api/: Main.hs
matter-service/src/Matter/Service/: Config.hs  Lib.hs  Models.hs
matter-service/src/Matter/Service/Api/: Item.hs  Module.hs
matter-service/src/Matter/Service/Query/: Item.hs  Module.hs
my-awesome-pux-app/: .gitignore  package-lock.json  package.json  psc-package.json  webpack.config.js
my-awesome-pux-app/src/App/: State.purs
my-awesome-pux-app/src/Syntax/: Exp.purs  Zipper.purs
