name:                matter-daemon
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/matter-server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Matter.Daemon.App

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , exceptions
                     , matter-service
                     , matter-language
                     , monad-control
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , resourcet
                     , text
                     , transformers
                     , transformers-base
                     , wai
                     , warp


executable matter-daemon-app
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , matter-daemon
  default-language:    Haskell2010



test-suite matter-daemon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , matter-daemon
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/matter-server