name:           matter-language
version:        0.0.0
synopsis:       Matter programming language syntax library
description:    Purely Functional Systems Language
category:       Compilers
homepage:       https://github.com/andgate/matter
bug-reports:    https://github.com/andgate/matter/issues
maintainer:     Gabriel Anderson
license:        MIT
license-file:   LICENSE.md
build-type:     Simple
cabal-version:  >=1.10


source-repository head
  type: git
  location: https://github.com/andgate/matter

library
  hs-source-dirs:
      src
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-warn-name-shadowing -fno-warn-unused-binds -fno-warn-unused-matches -fno-warn-unused-do-bind -fno-warn-orphans
  build-depends:
      base <5
    , aeson
    , binary
    , lens
    , prettyprinter
    , prettyprinter-ansi-terminal
    , text

  exposed-modules:
      Matter.Language.Syntax.Location
      Matter.Language.Syntax.Name
      Matter.Language.Syntax.Prim
      Matter.Language.Syntax.Source
      
  
  other-modules:
  default-language: Haskell2010
