name:                matter-server-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/matter-server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


Flag Web
  Description:  Enable web build
  Default:      False


library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Matter.Server.Api.Item
                       Matter.Server.Api.Module
                       Matter.Server.Config
                       Matter.Server.Lib
                       Matter.Server.Model.Item
                       Matter.Server.Model.Module
                       Matter.Server.Query.Item
                       Matter.Server.Query.Module

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , exceptions
                     , matter-language-syntax
                     , monad-control
                     , mtl
                     , postgresql-libpq
                     , selda
                     , selda-postgresql
                     , selda-sqlite
                     , servant
                     , servant-js
                     , servant-server
                     , text
                     , transformers
                     , transformers-base
                     , wai
                     , warp
  
  if flag(web)
    Build-Depends: persistent-postgresql
    CC-Options: "-DWEB"
  else
    build-depends: persistent-sqlite

executable matter-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , matter-server-api
  default-language:    Haskell2010

test-suite matter-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , matter-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/matter-server
