name:                matter-server-postgresql
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/matter-server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Config
  build-depends:       base >= 4.7 && < 5
                     , matter-server
                     , monad-control
                     , mtl
                     , persistent-postgresql
                     , read-env-var
                     , wai
                     , warp
  default-language:    Haskell2010

executable matter-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , matter-server-postgresql
  default-language:    Haskell2010

test-suite matter-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , matter-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/matter-server
