name:                matter-service
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/matter-server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10



library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Matter.Service.Api.Item
                       Matter.Service.Api.Module
                       Matter.Service.Config
                       Matter.Service.Lib
                       Matter.Service.Models
                       Matter.Service.Query.Item
                       Matter.Service.Query.Module

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , exceptions
                     , matter-language
                     , monad-control
                     , mtl
                     , persistent
                     , persistent-template
                     , resourcet
                     , servant
                     , servant-server
                     , text
                     , transformers
                     , transformers-base
                     , wai
                     , warp


executable matter-service-api
  hs-source-dirs:      apps/matter-service-api
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , matter-service
                     , servant-js
  default-language:    Haskell2010


test-suite matter-service-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , matter-service
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/matter-server